# Frequency-AI

./: .gitignore  LICENSE.txt  README.md  demo_anchor.mid  pyproject.toml  requirements.txt
presets/: demo.yaml
scripts/: make_full_mix.py  make_parts_mid.py  make_song60.py
src/freqai/: __init__.py  cli.py  config.py
src/freqai/export/: __init__.py  midi_export.py  stems.py
src/freqai/inference/: __init__.py  arrange_v0.py  drums_v0.py  generate.py  groove_imposer.py  motif_v0.py  song_v0.py  symbolic_v0.py  voiceleading_v0.py
src/freqai/synthesis/: __init__.py  renderer.py
