[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frequency-ai"
version = "0.0.1"
description = "Controllable, hierarchical music generation scaffold (M0): structure/harmony planning, groove imposition, MIDI export."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Jason" }]
keywords = ["music", "MIDI", "audio", "generation", "diffusion", "DDSP", "groove", "transformer"]

dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "numpy>=1.26",
  "mido>=1.3",
  "pretty_midi>=0.2.10",
  "pandas>=2.2",
  "PyYAML>=6.0.1",
  "soundfile>=0.12.1"
]

[project.urls]
Homepage = "https://github.com/JPcketz/Frequency-AI"
Repository = "https://github.com/JPcketz/Frequency-AI"

[project.scripts]
freqai = "freqai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# (future) include non-code assets (e.g., SFZ presets) here
#[tool.setuptools.package-data]
#freqai = ["synthesis/instruments/**/*.sfz", "synthesis/instruments/**/*.yaml"]